första utkast på sidan

--- a/public/fr/uppsagd/configuration/index.html
+++ b/public/fr/uppsagd/configuration/index.html
@@ -207,7 +207,7 @@
 
 <script>
   let indexURL = "//localhost:1313/fr/searchindex.json";
-  let includeSectionsInSearch = ["uppsagd","billing-pricing","features"];
+  let includeSectionsInSearch = ["uppsagd","brister","forhandling"];
   let no_results_for = "No results for";
   let empty_search_results_placeholder = "Type something to search...";
 </script>
