--- a/public/index.html
+++ b/public/index.html
@@ -11553,41 +11553,8 @@ iframe.wait-autoplay {
 
 
 
+style="background-size: ;background-position: center center;background-repeat: no-repeat;" 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
-style="background-image: url(/images/banner_hu4057177298750792941.webp); background-size: cover;background-position: center center;background-repeat: no-repeat;" 
-
- 
-
- 
 
 
 
