--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -209,7 +209,7 @@
 
 <script>
   let indexURL = "//localhost:1313/searchindex.json";
-  let includeSectionsInSearch = ["installation","billing-pricing","features"];
+  let includeSectionsInSearch = ["uppsagd","brister","forhandling"];
   let no_results_for = "No results for";
   let empty_search_results_placeholder = "Type something to search...";
 </script>
