--- a/public/fr/brister/profile/index.html
+++ b/public/fr/brister/profile/index.html
@@ -207,7 +207,7 @@
 
 <script>
   let indexURL = "//localhost:1313/fr/searchindex.json";
-  let includeSectionsInSearch = ["uppsagd","brister","features"];
+  let includeSectionsInSearch = ["uppsagd","brister","forhandling"];
   let no_results_for = "No results for";
   let empty_search_results_placeholder = "Type something to search...";
 </script>
@@ -12590,7 +12590,7 @@ function restoreTabSelections() {
             
               <a
                 class="nav nav-next"
-                href="//localhost:1313/fr/features/"
+                href="//localhost:1313/fr/forhandling/"
                 aria-label="Previous page">
                 <span class="d-none d-md-block">Features</span>
                 <i class="ti-arrow-right ms-2"></i>
