--- a/public/fr/uppsagd/customization/index.html
+++ b/public/fr/uppsagd/customization/index.html
@@ -207,7 +207,7 @@
 
 <script>
   let indexURL = "//localhost:1313/fr/searchindex.json";
-  let includeSectionsInSearch = ["uppsagd","billing-pricing","features"];
+  let includeSectionsInSearch = ["uppsagd","brister","forhandling"];
   let no_results_for = "No results for";
   let empty_search_results_placeholder = "Type something to search...";
 </script>
@@ -12325,7 +12325,7 @@ iframe.wait-autoplay {
             
               <a
                 class="nav nav-next"
-                href="//localhost:1313/fr/billing-pricing/"
+                href="//localhost:1313/fr/brister/"
                 aria-label="Previous page">
                 <span class="d-none d-md-block">Billing &amp; Pricing</span>
                 <i class="ti-arrow-right ms-2"></i>
