--- a/public/uppsagd/kalendermanad/index.html
+++ b/public/uppsagd/kalendermanad/index.html
@@ -207,7 +207,7 @@
 
 <script>
   let indexURL = "//localhost:1313/searchindex.json";
-  let includeSectionsInSearch = ["uppsagd","brister","features"];
+  let includeSectionsInSearch = ["uppsagd","brister","forhandling"];
   let no_results_for = "No results for";
   let empty_search_results_placeholder = "Type something to search...";
 </script>
