--- a/public/uppsagd/galleruppsagningen/index.html
+++ b/public/uppsagd/galleruppsagningen/index.html
@@ -11979,7 +11979,9 @@ iframe.wait-autoplay {
         <div class="p-lg-5 p-4 bg-white" id="content">
           <h2 class="mb-5" id="title">Gäller uppsägningen?</h2>
           
-            <div class="content"><h4 id="har-du-fått-en-skriflig-uppsägning">Har du fått en skriflig uppsägning?</h4>
+            <div class="content"><h4 id="för-att-veta-om-din-uppsägning-är-giltig-eller-inte-måste-vi-reda-ut-några-saker">För att veta om din uppsägning är giltig eller inte måste vi reda ut några saker.</h4>
+<p><strong>Det finns mycket regler runt uppsängingar. Om en hyresvärd skickar en uppsägning betyder det inte att man måste flytta ut. Uppsägningen måste alltid prövas rättsligt om hyresgästen har besittningsskydd.</strong></p>
+<h4 id="har-du-fått-en-skriflig-uppsägning">Har du fått en skriflig uppsägning?</h4>
 <p>Uppsägningar från hyresvärden <strong>måste alltid vara skriftliga</strong>. Har du <strong>inte fått</strong> en <strong>skriftlig uppsägning</strong> är du därför <strong>inte uppsagd</strong>.</p>
 <p>Många hyresvärdar hotar med uppsägning eftersom risken att förlora bostaden är något av det läskigaste som finns. Börja med att tänka efter om hyresvärden har sagt det eller skrivit det till dig.</p>
 <h4 id="nej-hyresvärden-har-bara-sagt-att-jag-är-uppsagdska-sägas-upp">Nej, hyresvärden har bara sagt att jag är uppsagd/ska sägas upp.</h4>
