--- a/public/uppsagd/galleruppsagningen/index.html
+++ b/public/uppsagd/galleruppsagningen/index.html
@@ -11981,12 +11981,13 @@ iframe.wait-autoplay {
           
             <div class="content"><h4 id="för-att-veta-om-din-uppsägning-är-giltig-eller-inte-måste-vi-reda-ut-några-saker">För att veta om din uppsägning är giltig eller inte måste vi reda ut några saker.</h4>
 <p><strong>Det finns mycket regler runt uppsängingar. Om en hyresvärd skickar en uppsägning betyder det inte att man måste flytta ut. Uppsägningen måste alltid prövas rättsligt om hyresgästen har besittningsskydd.</strong></p>
-<h4 id="har-du-fått-en-skriflig-uppsägning">Har du fått en skriflig uppsägning?</h4>
+<p><strong><strong>Den som hyr i andra hand eller är inneboende har inte besittningsskydd. Man kan då inte få uppsägningen prövad. Du som har skrivit under ett besittningsskyddsavstående i samband med att kontraktet tecknades kan inte heller få uppsägningen prövad, förutsatt att den sker av den anledning som framgår i besittningsskyddsavståendet.</strong></strong></p>
+<h6 id="har-du-fått-en-skriflig-uppsägning">Har du fått en skriflig uppsägning?</h6>
 <p>Uppsägningar från hyresvärden <strong>måste alltid vara skriftliga</strong>. Har du <strong>inte fått</strong> en <strong>skriftlig uppsägning</strong> är du därför <strong>inte uppsagd</strong>.</p>
 <p>Många hyresvärdar hotar med uppsägning eftersom risken att förlora bostaden är något av det läskigaste som finns. Börja med att tänka efter om hyresvärden har sagt det eller skrivit det till dig.</p>
-<h4 id="nej-hyresvärden-har-bara-sagt-att-jag-är-uppsagdska-sägas-upp">Nej, hyresvärden har bara sagt att jag är uppsagd/ska sägas upp.</h4>
+<h6 id="nej-hyresvärden-har-bara-sagt-att-jag-är-uppsagdska-sägas-upp">Nej, hyresvärden har bara sagt att jag är uppsagd/ska sägas upp.</h6>
 <p><strong>Har du inte fått en skriftlig uppsägning kan du alltså pusta ut än så länge, du är inte uppsagd.</strong></p>
-<h4 id="ja-jag-har-fått-en-skriftlig-uppsägning">Ja, jag har fått en skriftlig uppsägning.</h4>
+<h6 id="ja-jag-har-fått-en-skriftlig-uppsägning">Ja, jag har fått en skriftlig uppsägning.</h6>
 <p>Om du har fått en skriftlig uppsägning är det viktigt att ta reda på några saker. Oavsett vad som står i ditt hyresavtal är hyresvärdens uppsägningstid alltid <strong>tre kalendermånad</strong>. Det är viktigt att kolla i uppsägningen du har fått om datumet som hyresvärden angivit för när avtalet upphör är innan eller efter tre kalendermånader framåt i tiden.</p>
 <p><strong>Gå vidare till nästa steg, <em>Vad är kalendermånad, och varför är det viktigt?</em></strong>.</p>
 </div>
