--- a/public/uppsagd/galleruppsagningen/index.html
+++ b/public/uppsagd/galleruppsagningen/index.html
@@ -11980,8 +11980,10 @@ iframe.wait-autoplay {
           <h2 class="mb-5" id="title">Gäller uppsägningen?</h2>
           
             <div class="content"><h4 id="för-att-veta-om-din-uppsägning-är-giltig-eller-inte-måste-vi-reda-ut-några-saker">För att veta om din uppsägning är giltig eller inte måste vi reda ut några saker.</h4>
-<p><strong>Det finns mycket regler runt uppsängingar. Om en hyresvärd skickar en uppsägning betyder det inte att man måste flytta ut. Uppsägningen måste alltid prövas rättsligt om hyresgästen har besittningsskydd.</strong></p>
-<p><strong><strong>Den som hyr i andra hand eller är inneboende har inte besittningsskydd. Man kan då inte få uppsägningen prövad. Du som har skrivit under ett besittningsskyddsavstående i samband med att kontraktet tecknades kan inte heller få uppsägningen prövad, förutsatt att den sker av den anledning som framgår i besittningsskyddsavståendet.</strong></strong></p>
+<h6 id="uppsägningen-måste-alltid-prövas-rättsligt-innan-den-gäller">Uppsägningen måste alltid prövas rättsligt innan den gäller</h6>
+<p><strong>Det finns mycket regler runt uppsägningar. Om en hyresvärd skickar en uppsägning betyder det inte att man måste flytta ut. Uppsägningen måste alltid prövas rättsligt om hyresgästen har besittningsskydd.</strong></p>
+<h6 id="undantag-vid-inneboendesituation-och-andrahandsuthyrning">Undantag vid inneboendesituation och andrahandsuthyrning</h6>
+<p><em><strong>Den som hyr i andra hand eller är inneboende har inte besittningsskydd. Man kan då inte få uppsägningen prövad. Du som har skrivit under ett besittningsskyddsavstående i samband med att kontraktet tecknades kan inte heller få uppsägningen prövad, förutsatt att den sker av den anledning som framgår i besittningsskyddsavståendet.</strong></em></p>
 <h6 id="har-du-fått-en-skriflig-uppsägning">Har du fått en skriflig uppsägning?</h6>
 <p>Uppsägningar från hyresvärden <strong>måste alltid vara skriftliga</strong>. Har du <strong>inte fått</strong> en <strong>skriftlig uppsägning</strong> är du därför <strong>inte uppsagd</strong>.</p>
 <p>Många hyresvärdar hotar med uppsägning eftersom risken att förlora bostaden är något av det läskigaste som finns. Börja med att tänka efter om hyresvärden har sagt det eller skrivit det till dig.</p>
