--- a/public/uppsagd/galleruppsagningen/index.html
+++ b/public/uppsagd/galleruppsagningen/index.html
@@ -11990,7 +11990,7 @@ iframe.wait-autoplay {
 <h6 id="nej-hyresvärden-har-bara-sagt-att-jag-är-uppsagdska-sägas-upp">Nej, hyresvärden har bara sagt att jag är uppsagd/ska sägas upp.</h6>
 <p><strong>Har du inte fått en skriftlig uppsägning kan du alltså pusta ut än så länge, du är inte uppsagd.</strong></p>
 <h6 id="ja-jag-har-fått-en-skriftlig-uppsägning">Ja, jag har fått en skriftlig uppsägning.</h6>
-<p>Om du har fått en skriftlig uppsägning är det viktigt att ta reda på några saker. Oavsett vad som står i ditt hyresavtal är hyresvärdens uppsägningstid alltid <strong>tre kalendermånad</strong>. Det är viktigt att kolla i uppsägningen du har fått om datumet som hyresvärden angivit för när avtalet upphör är innan eller efter tre kalendermånader framåt i tiden.</p>
+<p>Om du har fått en skriftlig uppsägning är det viktigt att ta reda på några saker. Oavsett vad som står i ditt hyresavtal är hyresvärdens uppsägningstid alltid minst <strong>tre kalendermånader</strong>. Längre avtalat uppsägningstid är endast bindande för hyresvärden. Det är viktigt att kolla i uppsägningen du har fått om datumet som hyresvärden angivit för när avtalet upphör är innan eller efter tre kalendermånader framåt i tiden.</p>
 <p><strong>Gå vidare till nästa steg, <em>Vad är kalendermånad, och varför är det viktigt?</em></strong>.</p>
 </div>
           
