--- a/public/uppsagd/kalendermanad/index.html
+++ b/public/uppsagd/kalendermanad/index.html
@@ -11980,11 +11980,24 @@ iframe.wait-autoplay {
           <h2 class="mb-5" id="title">Var är kalendermånad, och varför är det viktigt?</h2>
           
             <div class="content"><p><strong>Tre kalendermånader</strong> innebär att tidsperioden för uppsägningen börjar räknas från och med nästkommande månadsskifte. <strong>Får du uppsägningen sjunde juni</strong> så börjar alltså uppsägningstiden att gälla <strong>den första juli</strong> och med tre kalendermånaders uppsägningstid innebär det alltså att uppsägningstiden blir under juli, augusti och september månad.</p>
-<p><strong>Det finns två sätt hyresvärden kan säga upp hyresgästen på.</strong> Det första och kanske vanligaste är något som kallas <strong>förlängningstvist</strong>. Det andra sättet kallas <strong>förverkande</strong>.</p>
-<h5 id="förlängningstvist">Förlängningstvist</h5>
+<p><strong>Det finns två sätt hyresvärden kan säga upp hyresgästen på.</strong> Det första och kanske vanligaste är något som kallas <strong>förlängningstvist</strong>. Det andra sättet kallas <strong>förverkande</strong>. Förlängningstvist innebär en uppsägning med den avtalade uppsägningstiden (minst 3 månader från hyresvärdens sida). Förverkande är en snabbare uppsägning.</p>
+<div class="accordion">
+  <div class="accordion-item">
+    <h2 class="accordion-header my-0" id="title-mer-om-f%C3%B6rl%C3%A4ngningstvist.">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-c052100a82b844b1891cb56bd71b179b51aa77d0" aria-expanded="false" aria-controls="c052100a82b844b1891cb56bd71b179b51aa77d0"> Mer om förlängningstvist.</button>
+    </h2>
+    <div id="collapse-c052100a82b844b1891cb56bd71b179b51aa77d0" class="accordion-collapse collapse" aria-labelledby="title-mer-om-f%C3%B6rl%C3%A4ngningstvist.">
+      <div class="accordion-body"><h6 id="förlängningstvist">Förlängningstvist</h6>
 <p>Det som kännetecknar en förlängningstvist är att <strong>uppsägningen sker med den avtalade uppsägningstiden (oftast tre månader)</strong>. Det heter förlängningstvist eftersom tvisten handlar om huruvida avtalet som gäller ska förlängas eller inte.</p>
 <p>Om det rör sig om en förlängningstvist behöver du inte vidta några åtgärder själv. Eftersom du har besittningsskydd kan du sitta lugnt i båten och helt enkelt bara bo kvar i lägenheten. Vill hyresvärden att avtalet ska sägas upp måste han själv ansöka till <strong>hyresnämnden</strong>, som är en domstolsliknande myndighet. De prövar bara frågor som rör hyror och arrenden. Ansöker han om att få saken prövad kommer du att få ett brev hem med en kallelse till din närmsta hyresnämnd. Är du <strong>medlem i Hyresgästföreningen</strong> har du <strong>rätt till juridiskt biträde</strong>, alltså att någon från föreningen kommer och företräder dig. Ungefär som en advokat under en rättegång, <strong>men utan att de är advokater</strong>.</p>
 <p>Du riskerar inte att behöva betala några dyra rättegångskostnader i Hyresnämnden. Var part <strong>står för sina egna kostnader</strong> (handlar alltså om resa dit, löneavdrag vid jobbledighet o.s.v.). Efter att ha skickat uppsägningen måste hyresvärden vänta en månad innan han kan skicka in sin ansökan om att få saken prövad i hyresnämnden.</p>
+<h6 id="vilka-skäl-kan-ligga-till-grund-för-att-bli-av-med-lägenheten-i-förlängningstvist">Vilka skäl kan ligga till grund för att bli av med lägenheten i förlängningstvist?</h6>
+<p>Det finns olika så kallade <strong>grunder</strong> som hyresvärden kan åberopa. Ett exempel är att huset ska rivas eller genomgå en mycket omfattande renovering där hyresgästen <strong>inte utan olägenhet</strong> för arbetena kan bo kvar. Det ska inte vara <strong>oskäligt mot hyresgästen</strong> att mista avtalet för att hyresvärdens talan ska nå framgång. Hyresgästen har inte rätt till ersättningsbostad, flytthjälp eller liknande åtgärder från hyresvärden. Hyresnämnden tar det dock i beaktning i beslutsfattandet. Mer information om detta finns i 46 § 4p i Hyreslagen.</p>
+</div>
+    </div>
+  </div>
+</div>
+
 
 
 
@@ -12010,10 +12023,33 @@ iframe.wait-autoplay {
   <div class="notice-body"><p>Har du fått en skriftlig uppsägning med tre kalendermånaders uppsägningstid eller mer behöver du inte göra något. Du behöver inte flytta när hyresvärden säger det. Det ska prövas rättsligt först, något som sker i Hyresnämnden. Du riskerar inga rättegångskostnader i Hyresnämnden.</p></div>
 </div>
 
-<h6 id="vilka-skäl-kan-ligga-till-grund-för-att-bli-av-med-lägenheten-i-förlängningstvist">Vilka skäl kan ligga till grund för att bli av med lägenheten i förlängningstvist?</h6>
-<p>Det finns olika så kallade <strong>grunder</strong> som hyresvärden kan åberopa. Ett exempel är att huset ska rivas eller genomgå en mycket omfattande renovering där hyresgästen <strong>inte utan olägenhet</strong> för arbetena kan bo kvar. Det ska inte vara <strong>oskäligt mot hyresgästen</strong> att mista avtalet för att hyresvärdens talan ska nå framgång. Hyresgästen har inte rätt till ersättningsbostad, flytthjälp eller liknande åtgärder från hyresvärden. Hyresnämnden tar det dock i beaktning i beslutsfattandet. Mer information om detta finns i 46 § 4p i Hyreslagen.</p>
-<h5 id="förverkande">Förverkande</h5>
+<div class="accordion">
+  <div class="accordion-item">
+    <h2 class="accordion-header my-0" id="title-forverkande">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-123fb0b8161d77e70b71820d895135329494fd85" aria-expanded="false" aria-controls="123fb0b8161d77e70b71820d895135329494fd85"> Forverkande</button>
+    </h2>
+    <div id="collapse-123fb0b8161d77e70b71820d895135329494fd85" class="accordion-collapse collapse" aria-labelledby="title-forverkande">
+      <div class="accordion-body"><h6 id="förverkande">Förverkande</h6>
 <p>Förverkanden är tyvärr lite allvarligare än förlängningstvister. Dels på grund av konsekvenserna man kan drabbas av, men framför allt på grund av att det ofta handlar om att man måste agera väldigt snabbt. Skillnaden mot förlängningstvister är att hyresvärden vid förverkande har möjlighet att vräka hyresgäster kortare inpå än den avtalade uppsägningstiden.</p>
+<h6 id="vad-är-stegen">Vad är stegen?</h6>
+<p>Ett förverkande går till så att hyresvärden först skickar en skriftlig uppsägning till hyresgästen. Att först skicka uppsägningen till hyresgästen är dock inte ett krav, utan hyresvärden kan gå <strong>direkt till Kronofogdemyndigheten</strong> eller till <strong>tingsrätten</strong>. I tingsrätten <strong>riskerar man rättegångskostnader</strong> om man skulle förlora målet.</p>
+<p>Det <strong>är däremot krav</strong> på att hyresvärden innan uppsägningen kan verkställas först ska ha meddelat hyresgästen om en så kallad <strong>rättelseanmaning</strong>. Man kan se det som en skriftlig varning på en arbetsplats ungefär. En <strong>rättelseanmaning ska innehålla</strong> dels på <strong>vilken grund</strong> hyresvärden menar att hyresgästen har <strong>förverkat</strong> hyresrätten. Handlar det om <strong>störningar eller obetalda hyror</strong> måste hyresvärden också <strong>meddela socialtjänsten</strong> i kommunen om att rättelseanmaningen är skickad.</p>
+<p>I tingsrätten ska hyresvärden bevisa att hyresgästen har gjort sig skyldig till en av de <strong>förverkandegrunder</strong> som finns uppställda i hyreslagen. Det kan också kallas <strong>besittningsbrytande grunder</strong> eftersom en hyresgäst som bryter mot dem kan förlora sitt <strong>besittningsskydd</strong>.</p>
+<h6 id="de-besittningsbrytande-grunderna">De besittningsbrytande grunderna</h6>
+<ul>
+<li>Upprepade fall av obetalda hyror</li>
+<li>Uthyrning av lägenheten i andra hand utan hyresvärdens eller hyresnämndens tillstånd</li>
+<li>Störningar</li>
+<li>Åsidosättande av ordning, sundhet och gott skick (t.ex. att upprepat inte plocka upp hundbajs på innergården, den är lite öppen för tolkning)</li>
+<li>Vanvård</li>
+<li>Brott mot avtalsklausuler och ordningsregler</li>
+<li>Obefogade hyresdeponeringar</li>
+</ul>
+</div>
+    </div>
+  </div>
+</div>
+
 
 
 
@@ -12035,23 +12071,35 @@ iframe.wait-autoplay {
           fill="currentColor" />
       </svg><p>Warning</p>
   </div>
-  <div class="notice-body"><p>Har du fått en uppsägning där den angivna uppsägningstiden är kortare än tre kalendermånader måste du agera mycket snabbt. Hyresvärden kan vända sig till Kronofogdemyndigheten och begära avhysning. Då måste du bestrida den ansökan om du vill bo kvar. Bestrider du inte mister du lägenheten. Har du missat deadlinen kan det gå att ansöka om en så kallad <strong>återvinning</strong>. En återvinning innebär att man kort efter slutdatumet tar upp fallet till prövning på nytt. Ansöker man inte om återvinning i tid kallas det att domen <strong>vinner laga kraft</strong>, alltså att den börjar gälla. Har man då inte agerat är man av med bostaden och riskerar att behöva stå för hyresvärdens rättegångskostnader.</p></div>
+  <div class="notice-body"><p>Har du fått en uppsägning där den angivna uppsägningstiden är kortare än tre kalendermånader måste du agera mycket snabbt. Hyresvärden kan vända sig till Kronofogdemyndigheten och begära avhysning. Då måste du bestrida den ansökan om du vill bo kvar. Bestrider du inte mister du lägenheten. Har du missat deadlinen kan det gå att ansöka om en så kallad <strong>återvinning</strong>. En återvinning innebär att man kort efter slutdatumet tar upp fallet till prövning på nytt. Ansöker man inte om återvinning i tid kallas det att domen <strong>vinner laga kraft</strong>, alltså att den börjar gälla. Har man då inte agerat är man av med bostaden och riskerar att behöva stå för hyresvärdens rättegångskostnader. Det kan gå att rädda, men ta situationen på yttersta allvar.</p></div>
 </div>
 
-<h6 id="vad-är-stegen">Vad är stegen?</h6>
-<p>Ett förverkande går till så att hyresvärden först skickar en skriftlig uppsägning till hyresgästen. Att först skicka uppsägningen till hyresgästen är dock inte ett krav, utan hyresvärden kan gå <strong>direkt till Kronofogdemyndigheten</strong> eller till <strong>tingsrätten</strong>. I tingsrätten <strong>riskerar man rättegångskostnader</strong> om man skulle förlora målet.</p>
-<p>Det <strong>är däremot krav</strong> på att hyresvärden innan uppsägningen kan verkställas först ska ha meddelat hyresgästen om en så kallad <strong>rättelseanmaning</strong>. Man kan se det som en skriftlig varning på en arbetsplats ungefär. En <strong>rättelseanmaning ska innehålla</strong> dels på <strong>vilken grund</strong> hyresvärden menar att hyresgästen har <strong>förverkat</strong> hyresrätten. Handlar det om <strong>störningar eller obetalda hyror</strong> måste hyresvärden också <strong>meddela socialtjänsten</strong> i kommunen om att rättelseanmaningen är skickad.</p>
-<p>I tingsrätten ska hyresvärden bevisa att hyresgästen har gjort sig skyldig till en av de <strong>förverkandegrunder</strong> som finns uppställda i hyreslagen. Det kan också kallas <strong>besittningsbrytande grunder</strong> eftersom en hyresgäst som bryter mot dem kan förlora sitt <strong>besittningsskydd</strong>.</p>
-<h6 id="de-besittningsbrytande-grunderna">De besittningsbrytande grunderna</h6>
-<ul>
-<li>Upprepade fall av obetalda hyror</li>
-<li>Uthyrning av lägenheten i andra hand utan hyresvärdens eller hyresnämndens tillstånd</li>
-<li>Störningar</li>
-<li>Åsidosättande av ordning, sundhet och gott skick (t.ex. att upprepat inte plocka upp hundbajs på innergården, den är lite öppen för tolkning)</li>
-<li>Vanvård</li>
-<li>Brott mot avtalsklausuler och ordningsregler</li>
-<li>Obefogade hyresdeponeringar</li>
-</ul>
+<div class="accordion">
+  <div class="accordion-item">
+    <h2 class="accordion-header my-0" id="title-42-hyreslagen-f%C3%B6rverkandegrunder.">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-c697c75ed41985d9360b1fdb120ee56afe9923c2" aria-expanded="false" aria-controls="c697c75ed41985d9360b1fdb120ee56afe9923c2"> 42 § hyreslagen, förverkandegrunder.</button>
+    </h2>
+    <div id="collapse-c697c75ed41985d9360b1fdb120ee56afe9923c2" class="accordion-collapse collapse" aria-labelledby="title-42-hyreslagen-f%C3%B6rverkandegrunder.">
+      <div class="accordion-body"><h6 id="42----hyresrätten-är-förverkad-och-hyresvärden-berättigad-att-säga-upp-avtalet-att-upphöra-i-förtid">42 §   Hyresrätten är förverkad och hyresvärden berättigad att säga upp avtalet att upphöra i förtid,</h6>
+<ol>
+<li>om hyresgästen, när det gäller en bostadslägenhet, dröjer med att betala hyran mer än en vecka efter förfallodagen och något annat inte följer av 55 e § femte-sjunde styckena,</li>
+<li>om hyresgästen, när det gäller en lokal, dröjer med att betala hyran mer än två vardagar efter förfallodagen,</li>
+<li>om hyresgästen, när det gäller en bostadslägenhet, utan behövligt samtycke eller tillstånd överlåter hyresrätten, annars sätter någon annan i sitt ställe eller upplåter lägenheten i andra hand och inte kan visa någon giltig ursäkt,</li>
+<li>om hyresgästen, när det gäller en lokal, utan behövligt samtycke eller tillstånd överlåter hyresrätten, annars sätter någon annan i sitt ställe eller upplåter lägenheten i andra hand och inte efter tillsägelse utan dröjsmål antingen gör rättelse eller ansöker om tillstånd och får ansökan beviljad,</li>
+<li>om hyresgästen, när det gäller en bostadslägenhet, lämnar eller tar emot en särskild ersättning för överlåtelse av hyresrätten till lägenheten, eller begär särskild ersättning för överlåtelse av hyresrätten eller för upplåtelse av lägenheten eller en del av den,</li>
+<li>om hyresgästen, när det gäller en bostadslägenhet, vid upplåtelse av lägenheten eller en del av den tar emot en hyra som inte är skälig enligt 55 § fjärde stycket och inte kan visa någon giltig ursäkt,</li>
+<li>om lägenheten används i strid med 23 eller 41 § och hyresgästen inte efter uppmaning gör rättelse utan dröjsmål,</li>
+<li>om hyresgästen eller någon annan, till vilken hyresrätten överlåtits eller lägenheten upplåtits, genom vårdslöshet är vållande till att ohyra förekommer i lägenheten eller genom att inte underrätta hyresvärden om detta bidrar till att ohyran sprids i fastigheten,</li>
+<li>om lägenheten vanvårdas på något annat sätt eller hyresgästen eller någon annan, till vilken hyresrätten överlåtits eller lägenheten upplåtits, gör sig skyldig till bristande skötsamhet eller störningar i boendet eller inte håller den tillsyn som krävs enligt 25 b § och rättelse inte görs utan dröjsmål efter uppmaning,</li>
+<li>om tillträde till lägenheten vägras i strid med 26 § och hyresgästen inte kan visa någon giltig ursäkt,</li>
+<li>om hyresgästen åsidosätter en avtalsenlig skyldighet som går utöver hyresgästens skyldigheter enligt detta kapitel och det måste anses vara av synnerlig vikt för hyresvärden att skyldigheten fullgörs, eller</li>
+<li>om lägenheten eller utrymme som hör till den används för att begå allvarlig brottslighet eller för att begå brott vanemässigt eller i större omfattning.</li>
+</ol>
+</div>
+    </div>
+  </div>
+</div>
+
 </div>
           
           <p class="post-meta border-bottom pb-3 mb-0 mt-3">
