--- a/public/uppsagd/kalendermanad/index.html
+++ b/public/uppsagd/kalendermanad/index.html
@@ -12025,10 +12025,10 @@ iframe.wait-autoplay {
 
 <div class="accordion">
   <div class="accordion-item">
-    <h2 class="accordion-header my-0" id="title-forverkande">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-123fb0b8161d77e70b71820d895135329494fd85" aria-expanded="false" aria-controls="123fb0b8161d77e70b71820d895135329494fd85"> Forverkande</button>
+    <h2 class="accordion-header my-0" id="title-mer-om-f%C3%B6rverkande">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-a2a3fd7ee95624571fd3a68ff3dc5cc461334e8d" aria-expanded="false" aria-controls="a2a3fd7ee95624571fd3a68ff3dc5cc461334e8d"> Mer om förverkande</button>
     </h2>
-    <div id="collapse-123fb0b8161d77e70b71820d895135329494fd85" class="accordion-collapse collapse" aria-labelledby="title-forverkande">
+    <div id="collapse-a2a3fd7ee95624571fd3a68ff3dc5cc461334e8d" class="accordion-collapse collapse" aria-labelledby="title-mer-om-f%C3%B6rverkande">
       <div class="accordion-body"><h6 id="förverkande">Förverkande</h6>
 <p>Förverkanden är tyvärr lite allvarligare än förlängningstvister. Dels på grund av konsekvenserna man kan drabbas av, men framför allt på grund av att det ofta handlar om att man måste agera väldigt snabbt. Skillnaden mot förlängningstvister är att hyresvärden vid förverkande har möjlighet att vräka hyresgäster kortare inpå än den avtalade uppsägningstiden.</p>
 <h6 id="vad-är-stegen">Vad är stegen?</h6>
