--- a/public/forhandling/hoghyra/index.html
+++ b/public/forhandling/hoghyra/index.html
@@ -12145,7 +12145,10 @@ iframe.wait-autoplay {
     <div class="row align-items-center">
       <div class="col-md-8 text-center text-md-start">
         <p>
-          Upphovsrätt @kallmoraberget, 2024
+          upphovsrätt erik alvner, 2024
+          
+
+          
         </p>
       </div>
       <div class="col-md-4 text-center text-md-end">
