--- a/public/uppsagd/elements/index.html
+++ b/public/uppsagd/elements/index.html
@@ -13255,7 +13255,10 @@ raw Markdown line up prettily. You can also use inline Markdown.</p>
     <div class="row align-items-center">
       <div class="col-md-8 text-center text-md-start">
         <p>
-          Upphovsrätt @kallmoraberget, 2024
+          upphovsrätt erik alvner, 2024
+          
+
+          
         </p>
       </div>
       <div class="col-md-4 text-center text-md-end">
