--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -82,7 +82,7 @@
   
 
 
-<title>Frequently Asked Questions</title>
+<title>Vanliga frågor</title>
 
 
 
@@ -184,13 +184,13 @@
 
 
 
-<meta property="og:title" content="Frequently Asked Questions" />
+<meta property="og:title" content="Vanliga frågor" />
 <meta property="og:description" content="This is meta description" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="//localhost:1313/faq/" />
 
 
-<meta name="twitter:title" content="Frequently Asked Questions" />
+<meta name="twitter:title" content="Vanliga frågor" />
 <meta name="twitter:description" content="This is meta description" />
 
 
@@ -11776,7 +11776,7 @@ iframe.wait-autoplay {
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="section-title text-primary">Frequently Asked Questions</h2>
+          <h2 class="section-title text-primary">Vanliga frågor</h2>
           
           <div id="accordion-wrapper">
             <div class="accordion">
@@ -11785,17 +11785,7 @@ iframe.wait-autoplay {
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-0326ec6f39903b51ee050739a8f9b8adefb8cce9" aria-expanded="false" aria-controls="0326ec6f39903b51ee050739a8f9b8adefb8cce9"> Will updates also be free?</button>
     </h2>
     <div id="collapse-0326ec6f39903b51ee050739a8f9b8adefb8cce9" class="accordion-collapse collapse" aria-labelledby="title-will-updates-also-be-free">
-      <div class="accordion-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque praesentium nisi officiis maiores quia sapiente totam omnis vel sequi corporis ipsa incidunt reprehenderit recusandae maxime perspiciatis iste placeat architecto, mollitia delectus <a href="https://examplesite.com"
-
-
-
-
- target="_blank"
- 
-
-
->link</a>
- ut ab quibusdam. Magnam cumque numquam tempore reprehenderit illo, unde cum omnis vel sed temporibus, repudiandae impedit nam ad enim porro, qui labore fugiat quod suscipit fuga necessitatibus. Perferendis, ipsum? Cum, reprehenderit. Sapiente atque quam vitae, magnam dolore consequatur temporibus harum odit ab id quo qui aspernatur aliquid officiis sit error asperiores eveniet quibusdam, accusantium enim recusandae quas ea est! Quaerat omnis, placeat vitae laboriosam doloremque recusandae mollitia minima!</div>
+      <div class="accordion-body">Här skriver jag allting i markdown bla bla bla</div>
     </div>
   </div>
 </div>
