--- a/public/hyreslagen/p01/index.html
+++ b/public/hyreslagen/p01/index.html
@@ -11980,31 +11980,45 @@ iframe.wait-autoplay {
         <div class="p-lg-5 p-4 bg-white" id="content">
           <h2 class="mb-5" id="title">§1 - inledande bestämmelser</h2>
           
-            <div class="content"><p>1 §   Detta kapitel avser avtal, genom vilka hus eller delar av hus upplåts till nyttjande mot ersättning. Detta gäller även om lägenheten upplåtits genom tjänsteavtal eller avtal i anslutning till sådant avtal.</p>
+            <div class="content"><h6 id="1-st"><strong>1 st.</strong></h6>
+<p>Detta kapitel avser avtal, genom vilka hus eller delar av hus upplåts till nyttjande mot ersättning. Detta gäller även om lägenheten upplåtits genom tjänsteavtal eller avtal i anslutning till sådant avtal.</p>
 <div class="accordion">
   <div class="accordion-item">
-    <h2 class="accordion-header my-0" id="title-inneb%C3%B6rd-1-1-st.">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-950196812e36ea601ef3c20681b6fb147e83b9ed" aria-expanded="false" aria-controls="950196812e36ea601ef3c20681b6fb147e83b9ed"> innebörd 1 § 1 st.</button>
+    <h2 class="accordion-header my-0" id="title-inneb%C3%B6rd">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-e81836f0f1077c4b1dec465ed4ac55459ca21207" aria-expanded="false" aria-controls="e81836f0f1077c4b1dec465ed4ac55459ca21207"> Innebörd</button>
     </h2>
-    <div id="collapse-950196812e36ea601ef3c20681b6fb147e83b9ed" class="accordion-collapse collapse" aria-labelledby="title-inneb%C3%B6rd-1-1-st.">
+    <div id="collapse-e81836f0f1077c4b1dec465ed4ac55459ca21207" class="accordion-collapse collapse" aria-labelledby="title-inneb%C3%B6rd">
       <div class="accordion-body">Första paragrafen inleds med att göra det klart att bestämmelserna i hyreslagen gäller för hus och lägenheter och delar av hus som hyrs ut. Det gäller också personalbostäder.</div>
     </div>
   </div>
 </div>
 
+<h6 id="2-st"><strong>2 st.</strong></h6>
 <p>Innefattar avtalet även upplåtelse av jord att nyttjas tillsammans med lägenheten, ska detta kapitel tillämpas på avtalet, om jorden ska användas för trädgårdsodling i mindre omfattning eller för annat ändamål än jordbruk. Förenas ett tjänsteavtal, som inte är av ringa betydelse, med upplåtelse av såväl lägenhet för bostadsändamål som jord, ska kapitlet tillämpas, om upplåtelsen av lägenheten är mera betydelsefull än upplåtelsen av jorden.</p>
 <div class="accordion">
   <div class="accordion-item">
-    <h2 class="accordion-header my-0" id="title-inneb%C3%B6rd-1-2-st.">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-832d899b3f9a8a330a2b06aaa281ec83a22caa1b" aria-expanded="false" aria-controls="832d899b3f9a8a330a2b06aaa281ec83a22caa1b"> innebörd 1 § 2 st.</button>
+    <h2 class="accordion-header my-0" id="title-inneb%C3%B6rd">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-e81836f0f1077c4b1dec465ed4ac55459ca21207" aria-expanded="false" aria-controls="e81836f0f1077c4b1dec465ed4ac55459ca21207"> Innebörd</button>
     </h2>
-    <div id="collapse-832d899b3f9a8a330a2b06aaa281ec83a22caa1b" class="accordion-collapse collapse" aria-labelledby="title-inneb%C3%B6rd-1-2-st.">
+    <div id="collapse-e81836f0f1077c4b1dec465ed4ac55459ca21207" class="accordion-collapse collapse" aria-labelledby="title-inneb%C3%B6rd">
       <div class="accordion-body">Här markeras var gränsen mellan ett så kallat jordbruksarrende och en hyreslägenhet är. Både i vanliga avtal och i personalavtal får jord medfölja (exempelvis vid uthyrning av en villa), men det får inte vara så pass myket och sådan jord som används för jordbruk.</div>
     </div>
   </div>
 </div>
 
+<h6 id="3-st"><strong>3 st.</strong></h6>
 <p>Med bostadslägenhet avses lägenhet som upplåtits för att helt eller till en inte oväsentlig del användas som bostad. Med lokal avses annan lägenhet än bostadslägenhet.</p>
+<div class="accordion">
+  <div class="accordion-item">
+    <h2 class="accordion-header my-0" id="title-inneb%C3%B6rd">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-e81836f0f1077c4b1dec465ed4ac55459ca21207" aria-expanded="false" aria-controls="e81836f0f1077c4b1dec465ed4ac55459ca21207"> Innebörd</button>
+    </h2>
+    <div id="collapse-e81836f0f1077c4b1dec465ed4ac55459ca21207" class="accordion-collapse collapse" aria-labelledby="title-inneb%C3%B6rd">
+      <div class="accordion-body">I lagens mening är en <em>&ldquo;lägenhet&rdquo;</em> någonting som har omslutande väggar och tak. I det här stycket avgränsas vad som räknas som just <em>bostads</em>lägenhet. För att det ska räknas som bostadslägenhet måste den ha &ldquo;upplåtits för att&rdquo; användas som bostad. Det är alltså vad syftet är när man ingår själva hyresavtalet som spelar roll. Börjar du hyra någonting som lokal och sedan flyttar in i den blir det alltså inte en bostadslägenhet, eftersom syftet från början var att använda det som lokal.</div>
+    </div>
+  </div>
+</div>
+
 <p>Det som föreskrivs i detta kapitel om sambor gäller endast sådana samboförhållanden där ingen av samborna är gift.</p>
 <p>Förbehåll som strider mot en bestämmelse i detta kapitel är utan verkan mot hyresgästen eller den som har rätt att träda i hans eller hennes ställe, om inte annat anges.</p>
 <p>Omfattar hyresavtalet minst tre bostadslägenheter, som hyresgästen ska hyra ut i andra hand eller upplåta med kooperativ hyresrätt, får parterna avtala om förbehåll som strider mot det som sägs i detta kapitel om sådana lägenheter, under förutsättning att förbehållet inte strider mot bestäm- melserna om lokaler och inte heller avser rätten till förlängning av avtalet eller grunderna för fastställande av hyresvillkoren i samband med sådan förlängning. Ett sådant förbehåll gäller endast om det godkänts av hyresnämnden. Godkännande behövs dock inte om staten, en kommun, en region eller ett kommunalförbund är hyresvärd.</p>
