--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -254,7 +254,7 @@
 
 <script>
   let indexURL = "//localhost:1313/searchindex.json";
-  let includeSectionsInSearch = ["forhandling","hyreslagen","uppsagd","brister"];
+  let includeSectionsInSearch = ["brister","viktigadatum","forhandling","hyreslagen","uppsagd"];
   let no_results_for = "No results for";
   let empty_search_results_placeholder = "Type something to search...";
 </script>
