--- a/public/brister/ownership/index.html
+++ b/public/brister/ownership/index.html
@@ -252,7 +252,7 @@
 
 <script>
   let indexURL = "//localhost:1313/searchindex.json";
-  let includeSectionsInSearch = ["forhandling","hyreslagen","forhandling-(kopia)","uppsagd","brister"];
+  let includeSectionsInSearch = ["forhandling","hyreslagen","viktigadatum","uppsagd","brister"];
   let no_results_for = "No results for";
   let empty_search_results_placeholder = "Type something to search...";
 </script>
