--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -11830,7 +11830,7 @@ iframe.wait-autoplay {
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-b89e87b4d83247a17b0eb0c54ceec98f77ed433b" aria-expanded="false" aria-controls="b89e87b4d83247a17b0eb0c54ceec98f77ed433b"> Mina andra projekt</button>
     </h2>
     <div id="collapse-b89e87b4d83247a17b0eb0c54ceec98f77ed433b" class="accordion-collapse collapse" aria-labelledby="title-mina-andra-projekt">
-      <div class="accordion-body">Du får gärna ta en sväng förbi <a href="https://kallmoraberget.com/"
+      <div class="accordion-body">Du får gärna ta en sväng förbi min <a href="https://kallmoraberget.com"
 
 
 
@@ -11839,8 +11839,18 @@ iframe.wait-autoplay {
  
 
 
->https://kallmoraberget.com/</a>
- där jag har min foto-portfölj.</div>
+>foto-portfölj</a>
+ eller min <a href="https://analogriktning.kallmoraberget.com"
+
+
+
+
+ target="_blank"
+ 
+
+
+>blogg</a>
+.</div>
     </div>
   </div>
 </div>
