--- a/public/forhandling/index.html
+++ b/public/forhandling/index.html
@@ -111,7 +111,7 @@
 
 
 
-  <meta name="author" content="Themefisher" />
+  <meta name="author" content="Erik Alvner" />
 
 
 
@@ -12175,17 +12175,17 @@ iframe.wait-autoplay {
             <li class="list-inline-item">
               <a
                 class="text-color d-inline-block p-2"
-                href="https://github.com/erikalvner"
+                href="/oppenkallkod"
                 aria-label="">
                 <span class="visually-hidden">github</span>
-                <i class="ti-github"></i>
+                <i class="ti-linux"></i>
               </a>
             </li>
           
             <li class="list-inline-item">
               <a
                 class="text-color d-inline-block p-2"
-                href="www.linkedin.com/in/erik-alvner-b55a292b5"
+                href="https://www.linkedin.com/in/erik-alvner-b55a292b5"
                 aria-label="">
                 <span class="visually-hidden">linkedin</span>
                 <i class="ti-linkedin"></i>
