--- a/public/index.html
+++ b/public/index.html
@@ -106,11 +106,11 @@
 
 <meta
   name="description"
-  content="This is meta description" />
+  content="Hyresrätt online" />
 
 
 
-  <meta name="author" content="Themefisher" />
+  <meta name="author" content="Erik Alvner" />
 
 
 
@@ -184,13 +184,13 @@
 
 
 <meta property="og:title" content="hyresl" />
-<meta property="og:description" content="This is meta description" />
+<meta property="og:description" content="Hyresrätt online" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="//localhost:1313/" />
 
 
 <meta name="twitter:title" content="hyresl" />
-<meta name="twitter:description" content="This is meta description" />
+<meta name="twitter:description" content="Hyresrätt online" />
 
 
 
@@ -11997,17 +11997,17 @@ style="background-image: url(/images/banner_hu14980939233017356334.webp); backgr
             <li class="list-inline-item">
               <a
                 class="text-color d-inline-block p-2"
-                href="https://github.com/erikalvner"
+                href="/oppenkallkod"
                 aria-label="">
                 <span class="visually-hidden">github</span>
-                <i class="ti-github"></i>
+                <i class="ti-linux"></i>
               </a>
             </li>
           
             <li class="list-inline-item">
               <a
                 class="text-color d-inline-block p-2"
-                href="www.linkedin.com/in/erik-alvner-b55a292b5"
+                href="https://www.linkedin.com/in/erik-alvner-b55a292b5"
                 aria-label="">
                 <span class="visually-hidden">linkedin</span>
                 <i class="ti-linkedin"></i>
