glömde ändra en länk

--- a/public/oppenkallkod/index.html
+++ b/public/oppenkallkod/index.html
@@ -11784,10 +11784,12 @@ iframe.wait-autoplay {
           
           <div id="accordion-wrapper">
             <h5 id="den-här-hemsidan-är-byggd-på-öppen-källkod">Den här hemsidan är byggd på öppen källkod.</h5>
-<p>Du hittar hela sajtens <a href="/home/erik/Webbsajter/hyresratt/content/pages/faq.en.md"
+<p>Du hittar hela sajtens <a href="https://github.com/erikalvner/hyresratt"
 
 
 
+
+ target="_blank"
  
 
 
