--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
 
 
 
-<title>hyresl</title>
+<title>hyreslag</title>
 
 
 
@@ -99,7 +99,7 @@
 
   <meta
     name="keywords"
-    content="Boilerplate, Hugo, Themefisher, GetHugoThemes" />
+    content="hyresrätt, hyreslagen, hyresjuridik, hyra" />
 
 
 
@@ -183,13 +183,13 @@
 
 
 
-<meta property="og:title" content="hyresl" />
+<meta property="og:title" content="hyreslag" />
 <meta property="og:description" content="Hyresrätt online" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="//localhost:1313/" />
 
 
-<meta name="twitter:title" content="hyresl" />
+<meta name="twitter:title" content="hyreslag" />
 <meta name="twitter:description" content="Hyresrätt online" />
 
 
@@ -11644,7 +11644,7 @@ style="background-image: url(/images/banner_hu14980939233017356334.webp); backgr
     <div class="container px-2 px-md-0">
       <a class="navbar-brand px-2" href="/">
         
-          hyresl
+          hyresLag
         
       </a>
       <button
