--- a/public/uppsagd/kalendermanad/index.html
+++ b/public/uppsagd/kalendermanad/index.html
@@ -11582,7 +11582,7 @@ iframe.wait-autoplay {
     <div class="container px-2 px-md-0">
       <a class="navbar-brand px-2" href="/">
         
-          hyresl
+          hyresLag
         
       </a>
       <button
