--- a/public/viktigadatum/index.html
+++ b/public/viktigadatum/index.html
@@ -100,7 +100,7 @@
 
   <meta
     name="keywords"
-    content="Boilerplate, Hugo, Themefisher, GetHugoThemes" />
+    content="hyresrätt, hyreslagen, hyresjuridik, hyra" />
 
 
 
@@ -11585,7 +11585,7 @@ iframe.wait-autoplay {
     <div class="container px-2 px-md-0">
       <a class="navbar-brand px-2" href="/">
         
-          hyresl
+          hyresLag
         
       </a>
       <button
