--- a/public/baskunskaper/001juridiskgrund/skyddslagstiftning/003uppsagningstid/index.html
+++ b/public/baskunskaper/001juridiskgrund/skyddslagstiftning/003uppsagningstid/index.html
@@ -12087,7 +12087,7 @@ iframe.wait-autoplay {
 <h6 id="_om-inte--har-avtalats_"><em>&ldquo;om inte [&hellip;] har avtalats&rdquo;</em></h6>
 <p>Genom den fjärde paragrafen har lagstiftaren sett till att tre kalendermånader lång uppsägningstid är normen för bostadslägenheter. Det är dock inte allt. De har också öppnat för möjligheten att i avtalat komma överens om att uppsägningstiden skall vara längre än så. Första punkten handlar om bostadshyresavtal och andra om lokaler.</p>
 <p>I lagens femte paragraf riktar lagstiftaren in sig specifikt på hyresgäster som hyr <strong>bostadslägenheter</strong>. Här har lagstiftaren bestämt att möjligheten till avtal om längre uppsägningstid som fjärde paragrafen introducerade, inte gäller för gruppen <strong>hyresgäster i bostadslägenhet</strong>.</p>
-<h6 id="så-----vad-kommer-man-fram-till-egentligen">Så &mdash; vad kommer man fram till egentligen?</h6>
+<h3 id="så-----vad-kommer-man-fram-till-egentligen"><strong>Så &mdash; vad kommer man fram till egentligen?</strong></h3>
 <p>Fjärde paragrafen ger möjlighet för ett avtalsvillkor som förlänger uppsägningstiden. Femte paragrafen hindrar ett sådant avtalsvillkor från att gälla om det rör sig om hyresgäst i bostadslägenhet. Avtal om längre uppsägningstid än tre kalendermånader är alltså <strong>bindande för hyresvärden</strong>, men är <strong>verkningslöst för hyresgästens uppsägning</strong>.</p>
 </div>
           
