--- a/public/index.html
+++ b/public/index.html
@@ -11691,6 +11691,10 @@ style="background-image: url(/images/banner_hu14980939233017356334.webp); backgr
                 </a>
                 <div class="dropdown-menu">
                   
+                    <a class="dropdown-item" href="/baskunskaper/">
+                      Baskunskaper
+                    </a>
+                  
                     <a class="dropdown-item" href="/forhandling/">
                       Hyreshöjningar // förhandlingar
                     </a>
