--- a/public/baskunskaper/002hlgrund/index.html
+++ b/public/baskunskaper/002hlgrund/index.html
@@ -11631,6 +11631,10 @@ iframe.wait-autoplay {
                 </a>
                 <div class="dropdown-menu">
                   
+                    <a class="dropdown-item" href="/baskunskaper/">
+                      Baskunskaper
+                    </a>
+                  
                     <a class="dropdown-item" href="/forhandling/">
                       Hyreshöjningar // förhandlingar
                     </a>
